Add Code Style & Psalm

--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,13 @@
-/node_modules
-/public/hot
-/public/storage
-/storage/*.key
-/vendor
-.env
-.env.backup
+.vscode
+.idea
+.php_cs
+.php_cs.cache
 .phpunit.result.cache
-docker-compose.override.yml
-Homestead.json
-Homestead.yaml
-npm-debug.log
-yarn-error.log
-/.idea
-/.vscode
-_ide_helper.php
-.phpstorm.meta.php
-/public/css/app.css
-/public/js/app.js
+build
+composer.lock
+coverage
+docs
+phpunit.xml
+psalm.xml
+vendor
+.php-cs-fixer.cache
