--- a/composer.json
+++ b/composer.json
@@ -1,42 +1,48 @@
 {
-  "name": "kevinpurwito/php-constant",
-  "description": "",
-  "keywords": [
-    "kevinpurwito",
-    "php",
-    "constant"
-  ],
-  "homepage": "https://github.com/kevinpurwito/php-constant",
-  "license": "MIT",
-  "type": "library",
-  "authors": [
-    {
-      "name": "Kevin Purwito",
-      "email": "kevin.purwito@gmail.com",
-      "role": "Author"
-    }
-  ],
-  "require": {
-    "php": "^7.4|^8.0"
-  },
-  "require-dev": {
-    "phpunit/phpunit": "^9.0"
-  },
-  "autoload": {
-    "psr-4": {
-      "Kevinpurwito\\PhpConstant\\": "src"
-    }
-  },
-  "autoload-dev": {
-    "psr-4": {
-      "Kevinpurwito\\PhpConstant\\Tests\\": "tests"
-    }
-  },
-  "scripts": {
-    "test": "vendor/bin/phpunit",
-    "test-coverage": "vendor/bin/phpunit --coverage-html coverage"
-  },
-  "config": {
-    "sort-packages": true
-  }
+    "name": "kevinpurwito/php-constant",
+    "description": "PhpConstant is a simple class containing useful functions which you can extend to your constant classes.",
+    "keywords": [
+        "kevinpurwito",
+        "php",
+        "constant"
+    ],
+    "homepage": "https://github.com/kevinpurwito/php-constant",
+    "license": "MIT",
+    "type": "library",
+    "authors": [
+        {
+            "name": "Kevin Purwito",
+            "email": "kevin.purwito@gmail.com",
+            "role": "Author"
+        }
+    ],
+    "require": {
+        "php": "^7.4|^8.0"
+    },
+    "require-dev": {
+        "friendsofphp/php-cs-fixer": "^2.17",
+        "phpunit/phpunit": "^9.0",
+        "vimeo/psalm": "^4.3"
+    },
+    "autoload": {
+        "psr-4": {
+            "Kevinpurwito\\PhpConstant\\": "src"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Kevinpurwito\\PhpConstant\\Tests\\": "tests"
+        }
+    },
+    "scripts": {
+        "psalm": "vendor/bin/psalm",
+        "test": "vendor/bin/phpunit",
+        "test-coverage": "vendor/bin/phpunit --coverage-html coverage",
+        "format": "vendor/bin/php-cs-fixer fix --allow-risky=yes"
+    },
+    "config": {
+        "sort-packages": true
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
