Add code coverage

--- a/composer.json
+++ b/composer.json
@@ -35,10 +35,17 @@
         }
     },
     "scripts": {
-        "psalm": "vendor/bin/psalm",
-        "test": "vendor/bin/phpunit",
-        "test-coverage": "vendor/bin/phpunit --coverage-html coverage",
-        "format": "vendor/bin/php-cs-fixer fix --allow-risky=yes"
+        "format": "php-cs-fixer fix --allow-risky=yes",
+        "psalm": "psalm",
+        "test": "phpunit --color=always",
+        "test:coverage": [
+            "@putenv XDEBUG_MODE=coverage",
+            "phpunit --color=always --coverage-html coverage"
+        ],
+        "test:coverage-clover": [
+            "@putenv XDEBUG_MODE=coverage",
+            "phpunit --color=always --coverage-clover coverage/clover.xml"
+        ]
     },
     "config": {
         "sort-packages": true
