--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.17",
+        "orchestra/testbench": "^6.18",
         "phpunit/phpunit": "^9.0",
         "vimeo/psalm": "^4.3"
     },
@@ -34,6 +35,16 @@
             "Kevinpurwito\\PhpConstant\\Tests\\": "tests"
         }
     },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "Kevinpurwito\\PhpConstant\\PhpConstantServiceProvider"
+            ],
+            "aliases": [
+                "Kevinpurwito\\PhpConstant\\PhpConstantServiceFacade"
+            ]
+        }
+    },
     "scripts": {
         "format": "php-cs-fixer fix --allow-risky=yes",
         "psalm": "psalm",
@@ -45,6 +56,9 @@
         "test:coverage-clover": [
             "@putenv XDEBUG_MODE=coverage",
             "phpunit --color=always --coverage-clover coverage/clover.xml"
+        ],
+        "post-autoload-dump": [
+            "@php ./vendor/bin/testbench package:discover --ansi"
         ]
     },
     "config": {
